test/DaedalusCompiler.Tests/SemanticErrors/InheritanceResolverTests.cs
namespace DaedalusCompiler.Tests.SemanticErrors
{
    public class InheritanceResolverTests : BaseSemanticErrorsTests
    {
        
    }
}